# distributed-heterogeneous

./: .gitattributes  pyproject.toml
.github/workflows/: tests.yml
ci/: environment-3.10.yaml
distributed_heterogeneous/: __init__.py  _version.py  heterogeneous.py
distributed_heterogeneous/tests/: test_heterogeneous.py
